# Zhask

./: .env.example  .gitignore  CNAME  IntegriShield_Dev4_StatusReport.docx  Makefile  README.md  app.js  config.js  index.html  pyproject.toml  render.yaml  styles.css  ~$tegriShield_Dev4_StatusReport.docx
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
apps/: README.md
apps/dashboard/: .fix-colors.sed  .fix-colors2.sed  README.md  app.js  config.js  index.html  styles.css
apps/dashboard/assets/: README.md
apps/dashboard/backend/: Dockerfile  action_handlers.py  demo_generator.py  report_builder.py  requirements.txt  server.py
docs/: Dev4_StatusReport.md  INTEGRISHIELD_GUIDE.md  INTEGRISHIELD_USER_GUIDE.md  README.md  STATUS_MATRIX.md  roadmap_10features.md
docs/compliance/: README.md
docs/compliance/gdpr/: controls.md
docs/compliance/iso27001/: controls.md
docs/compliance/soc2/: controls.md
docs/compliance/sox/: controls.md
infrastructure/: README.md
infrastructure/helm/dashboard/: Chart.yaml  values.yaml
infrastructure/sql/: audit_events.sql
infrastructure/sql/migrations/: 001_webhook_tables.sql  002_tenant_rls.sql  003_ledger.sql  004_sod.sql  005_threat_intel.sql
infrastructure/terraform/: vault.tf
infrastructure/terraform/dev4-poc/: main.tf
ml/: README.md  __init__.py  requirements.txt
ml/data/seed/: anomaly_events.json  generate_seed_data.py  normal_events.json
ml/mlruns/: mlflow.db
ml/mlruns/mlruns/0/: meta.yaml
ml/models/: feature_names.json  isolation_forest_v1.pkl
ml/training/: __init__.py  evaluate_model.py  feature_engineering.py  train_model.py
modules/: README.md
modules/m01-api-gateway-shield/: Dockerfile  requirements.txt
modules/m03-traffic-analyzer/: Dockerfile  __init__.py  analyzer.py  config.py  main.py  requirements.txt  windows.py
modules/m04-zero-trust-fabric/: Dockerfile  README.md  pyproject.toml  service.py
modules/m05-sap-mcp-suite/: Dockerfile  pyproject.toml  service.py
modules/m06-credential-vault/: Dockerfile  README.md  pyproject.toml  service.py
modules/m06-credential-vault/src/integrishield/m06/: __init__.py  config.py  main.py  models.py
modules/m06-credential-vault/src/integrishield/m06/backends/: __init__.py  memory.py  vault.py
modules/m06-credential-vault/src/integrishield/m06/routes/: __init__.py  api.py  health.py
modules/m06-credential-vault/src/integrishield/m06/services/: __init__.py
modules/m06-credential-vault/tests/unit/: test_service.py
modules/m07-compliance-autopilot/: Dockerfile  pyproject.toml  service.py
modules/m08-anomaly-detection/: Dockerfile  __init__.py  config.py  detector.py  main.py  model_loader.py  requirements.txt  scorer.py
modules/m09-dlp/: Dockerfile  __init__.py  config.py  dlp_rules.py  main.py
modules/m10-incident-response/: Dockerfile  pyproject.toml  service.py
modules/m10-incident-response/src/integrishield/m10/: config.py  db_models.py  main.py  models.py
modules/m10-incident-response/src/integrishield/m10/routes/: api.py  health.py
modules/m10-incident-response/src/integrishield/m10/services/: consumer.py  incident_store.py  playbook_engine.py  playbooks.py
modules/m10-incident-response/tests/unit/: test_playbook_engine.py
modules/m11-shadow-integration/: Dockerfile  __init__.py  config.py  endpoint_registry.py  main.py  shadow_detector.py
modules/m12-rules-engine/: Dockerfile  README.md  pyproject.toml  service.py
modules/m12-rules-engine/src/integrishield/m12/: __init__.py  config.py  main.py  models.py
modules/m12-rules-engine/src/integrishield/m12/routes/: __init__.py  api.py  health.py
modules/m12-rules-engine/src/integrishield/m12/services/: __init__.py
modules/m12-rules-engine/tests/unit/: test_service.py
modules/m13-sbom-scanner/: Dockerfile  pyproject.toml  service.py
modules/m13-sbom-scanner/config/: cve_stubs.json
modules/m13-sbom-scanner/src/integrishield/m13/: config.py  main.py  models.py
modules/m13-sbom-scanner/src/integrishield/m13/feeds/: __init__.py  cache.py  nvd.py  osv.py
modules/m13-sbom-scanner/src/integrishield/m13/routes/: api.py  health.py
modules/m13-sbom-scanner/src/integrishield/m13/services/: cyclonedx_builder.py  scan_orchestrator.py  scan_store.py
modules/m13-sbom-scanner/src/integrishield/m13/services/scanners/: credential_scanner.py  dependency_extractor.py  rfc_scanner.py  sql_scanner.py
modules/m13-sbom-scanner/tests/unit/: test_scanners.py
modules/m14-webhook-gateway/: Dockerfile  requirements.txt
modules/m15-multicloud-ispm/: Dockerfile  README.md  pyproject.toml  service.py
modules/m16-mcp-security-layer/: Dockerfile  requirements.txt
modules/m17-sod-analyzer/: README.md
modules/m17-sod-analyzer/config/: risks_seed.json
modules/m18-ledger/: README.md
modules/m19-threat-intel/: README.md
planning/: README.md
poc/: .env.example  README.md  docker-compose.dev4.yml  docker-compose.yml
poc/mock-sap/: Dockerfile  main.py
poc/seed/: api_call_events.json
poc/seed-injector/: Dockerfile  inject.py
scripts/: README.md  demo_all_streams.py  demo_event_producer.py  deploy-to-zhask.sh  mock_data_full.py
shared/: README.md  requirements.txt
shared/audit/: __init__.py  ledger.py
shared/auth/: __init__.py  api_key.py  jwt_validator.py  middleware.py  tenant.py
shared/db/: __init__.py  models.py  session.py
shared/event_bus/: __init__.py  consumer.py  producer.py  streams.py
shared/schemas/v1/: analyzed_event.json  anomaly_event.json  api_call_event.json  compliance_alert.json  compliance_evidence.json  cred_access.json  dlp_alert.json  incident_event.json  intel_enrichment_event.json  ledger_anchor_event.json  mcp_query_event.json  sbom_scan_event.json  shadow_alert.json  sod_violation_event.json  webhook_dlq.json
shared/telemetry/: __init__.py  logger.py  setup.py
shared/utils/: __init__.py  schema_validator.py  time_utils.py
tests/: README.md
tests/e2e/: conftest.py  test_event_pipeline.py  test_m06_vault.py  test_m13_sbom.py  test_m14_webhooks.py
tests/unit/: test_ledger_chain.py  test_sod_engine.py
(+99 files in other folders)
