[project]
name = "integrishield"
version = "0.1.0"
description = "AI-powered middleware security platform — 18 modules, unified event bus"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["modules/*/src", "shared"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["integrishield"]

[tool.pytest.ini_options]
testpaths = ["modules", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
