[project]
name = "integrishield"
version = "0.1.0"
description = "AI-powered middleware security platform — 18 modules, unified event bus"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["modules/*/src", "shared"]
# POC monorepo: workers/scripts use path bootstrap before imports; demos use compact one-liners
extend-exclude = ["mlruns", ".venv", "venv", "node_modules"]

[tool.ruff.lint]
# CI uses E,F,W,I only — keep local Makefile `make lint` stricter via separate invocation if needed
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line length (handled by formatter / review)
    "E701",   # multiple statements on one line (colon) — common in demos
    "E702",   # multiple statements on one line (semicolon)
    "E402",   # import not at top — intentional after sys.path in workers/tests
    "I001",   # import block sorting — large churn; run `ruff check --select I --fix` when cleaning
    "E741",   # ambiguous name `l` / `I` in legacy comprehensions
    "F401",   # unused imports — noisy across optional code paths; IDE handles day-to-day
    "F841",   # unused variables — same
]

[tool.ruff.lint.isort]
known-first-party = ["integrishield"]

[tool.pytest.ini_options]
testpaths = ["modules", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
