[project]
name = "integrishield-m10-incident-response"
version = "0.1.0"
description = "IntegriShield Module 10 — Incident Response: automated incident lifecycle management and playbook orchestration"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integrishield"]

[tool.ruff]
extend = "../../pyproject.toml"
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
