[project]
name = "integrishield-m13-sbom-scanner"
version = "0.1.0"
description = "IntegriShield Module 13 — SBOM Scanner: static analysis and CycloneDX SBOM generation for SAP ABAP custom code"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integrishield"]

[tool.ruff]
extend = "../../pyproject.toml"
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
